<resources>
    <string name="app_name">Bible Study Trainer</string>

    <!-- BUTTON LABELS -->
    <string name="action_settings">Settings</string>
    <string name="plans_button">Plans</string>
    <string name="reading_button">Start Reading</string>
    <string name="search_button">Search</string>
    <string name="passage_chooser">Passage Chooser</string>
    <string name="previous_chapter">Previous Chapter</string>
    <string name="next_chapter">Next Chapter</string>

    <!-- ACTIVITY TITLES -->
    <string name="home_title">Bible Study Trainer</string>
    <string name="title_activity_reading">Reading</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_passage_chooser">PassageChooser</string>
    <string name="title_activity_chooser">Chooser</string>
    <string name="title_activity_display_plans">Plans</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- TAB TITLES -->
    <string name="bookTabTitle">Book</string>
    <string name="chapterTabTitle">Chapter</string>
    <string name="verseTabTitle">Verse</string>

    <!-- LOCAL SETTINGS -->
    <string name="preference_file_key">phoenixministries.biblestudytrainer.PREFERENCE_FILE_KEY</string>
    <string name="defaultVersion">English Standard Version</string>
    <string name="defaultVersionShort">ESV-eng</string>

    <!-- STATUS -->
    <string name="loading">Loading…</string>
    <string name="home_text">Welcome to the Quick Bible app. This app provides a quick way to find the Bible verses that you need on the fly, or read through the whole Bible. More features will be added on, but for now you can enjoy this simple Bible app.</string>

    <!-- ERRORS -->
    <string name="network_error">Error: No network connection</string>

    <!-- API REFERENCE -->
    <string name="api_key">pDCQp4vJfg9PoxB0E8zLU33NfAaSVyLXJQj63rM8</string>
    <string name="api_url">bibles.org/v2/passages.xml?q[]=</string>


</resources>
